@@ -1,7 +1,7 @@
 Source: stunnel4
 Section: net
 Priority: optional
-Build-Depends: debhelper (>=7), libssl-dev (>= 0.9.8),
+Build-Depends: debhelper (>=9), libssl-dev (>= 0.9.8),
  openssl (>= 0.9.8), libwrap0-dev, sdf, dh-autoreconf
 Maintainer: Peter Pentchev <roam@ringlet.net>
 Standards-Version: 3.9.5
@@ -15,7 +15,7 @@ Breaks: stunnel (<< 3:4.20-3)
 Provides: stunnel
 Replaces: stunnel
 Depends: ${shlibs:Depends}, ${misc:Depends}, openssl, netbase, perl-modules
-Pre-Depends: adduser
+Pre-Depends: ${misc:Pre-Depends}, adduser
 Suggests: logcheck-database
 Description: Universal SSL tunnel for network daemons
  The stunnel program is designed to work  as  SSL  encryption
