@@ -7,9 +7,10 @@
 export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 export DEB_CFLAGS_MAINT_APPEND=-Wall
 
+multiarch_path=	$(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
+
 override_dh_auto_configure:
 	dh_auto_configure -- \
-	  $(shell dpkg-buildflags --export=configure) \
 	  --enable-ipv6 --with-threads=pthread
 
 override_dh_auto_build:
@@ -21,7 +22,7 @@ override_dh_auto_install:
 	dh_auto_install -- -C doc
 
 	# .la file is useless
-	rm $(CURDIR)/debian/stunnel4/usr/lib/stunnel/libstunnel.la
+	rm $(CURDIR)/debian/stunnel4/usr/lib/$(multiarch_path)/stunnel/libstunnel.la
 
 	ln doc/stunnel.8 doc/stunnel4.8
 	ln doc/stunnel.fr.8 doc/stunnel4.fr.8
