@@ -18,6 +18,10 @@ stunnel4 (3:4.53-2) UNRELEASED; urgency=medium
   * Convert the copyright file to the 1.0 format and add my notice.
   * Remove the README.source file, unnecessary in the 3.0 (quilt) format.
   * Bump Standards-Version to 3.9.5 with no further changes.
+  * Bump the debhelper compatibility level to 9 with multiarch:
+    - let debhelper set the build environment variables
+    - add misc:Pre-Depends to the binary package
+    - remove the libtool .la file in the multiarch lib directory
 
  -- Peter Pentchev <roam@ringlet.net>  Tue, 25 Feb 2014 13:52:49 +0200
 
